# quatro

./: CMakeLists.txt  package.xml
config/: patchwork_params.yaml
examples/: run_global_registration.cpp
include/quatro/: conversion.hpp  fpfh_manager.hpp  imageProjection.hpp  patchwork.hpp  quatro.hpp  utility.h
include/quatro/teaser/: graph.h
include/quatro/teaser_utils/: feature_matcher.h  fpfh.h
src/: graph.cc
src/teaser_utils/: feature_matcher.cc  fpfh.cc
