<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quatro</name>
  <version>0.0.0</version>
  <description>Robust global registration</description>

  <maintainer email="shapelim@kaist.ac.kr">Hyungtae Lim</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Creative Commons Attribution-NonCommercial-ShareAlike 4.0 License</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <exec_depend>message_generation</exec_depend>
  <depend>libpcl-all-dev</depend>
  <depend>cv_bridge</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
